--- a/login.css
+++ b/login.css
@@ -67,7 +67,7 @@
 
 .benefit-item i {
   font-size: 1.5rem;
-  color: #f4ff61;
+  color: #ff8c00;
   width: 30px;
 }
 
@@ -104,7 +104,7 @@
 
 .floating-card i {
   font-size: 3rem;
-  color: #f4ff61;
+  color: #ff8c00;
   margin-bottom: 15px;
 }
 
